@@ -1,0 +1,4 @@
+yacy yacy
+by the people, for the people
+yacy -S CERN
+European Organization for Nuclear Research
